--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/cadastrar/CadastrarAlterarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/cadastrar/CadastrarAlterarClienteIndex.html
@@ -70,7 +70,7 @@
 							<span class="obrigatorio">*</span>
 							CEP:
 						</label>
-						<input type="text" maxlength="100" wicket:id="endereco.cep" class="cep campoText" />
+						<input type="text" wicket:id="endereco.cep" class="cep campoText" />
 					</div>
 					<div class="LabelInputNome grid_2">
 						<label>
@@ -101,12 +101,12 @@
 						</label>
 						<input type="text" maxlength="100" wicket:id="endereco.cidade" class="campoText" />
 					</div>
-					<div class="LabelInputNome grid_1">
+					<div class="LabelInputNome grid_2">
 						<label>
 							<span class="obrigatorio">*</span>
 							Estado:
 						</label>
-						<input type="text" maxlength="100" wicket:id="endereco.estado" class="campoText" />
+						<input type="text" maxlength="2" wicket:id="endereco.estado" class="campoText" />
 					</div>
 				</fieldset>
 				<div class="clear"></div>
