--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -33,9 +33,8 @@
 				</fieldset>
 				<div class="clear"></div>
 				<div class="grid_6" style="margin-left: 30px;">
-					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" /> <input
-						wicket:id="btnVoltar" class="botao" type="submit" name=Limpar value="Voltar"
-					/>
+					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" />
+					<input wicket:id="btnVoltar" class="botao" type="submit" name=Limpar value="Voltar" />
 				</div>
 			</div>
 		</div>
