--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/consultar/ConsultarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/consultar/ConsultarExercicioIndex.html
@@ -1,10 +1,43 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
+		<span wicket:id="feedBack" class="feedBack ui-shadow"></span>
 		<div class="div_center">
+			<div wicket:id="modal"></div>
+			<div>
+				<fieldset>
+					<legend class="legenda" align="left">Consultar Exercícios</legend>
+					<div class="dataTables_wrapper" style="left: 35px; width: 500px;">
+						<div class="LabelInputNome grid_3">
+							<label> Codigo:</label>
+							<input id="codigo" type="text" maxlength="100" class="numero campoText" />
+						</div>
+						<div class="LabelInputNome grid_6">
+							<label> Nome :</label>
+							<input id="nomePessoa" type="text" maxlength="100" class="campoText" />
+						</div>
+						<div class="LabelInputNome grid_3">
+							<label> CPF:</label>
+							<input id="cpfPessoa" type="text" maxlength="100" class="cpf campoText" />
+						</div>
+						<div class="LabelInputNome grid_6">
+							<label> Email:</label>
+							<input id="emailPessoa" type="text" maxlength="100" class="campoText" />
+						</div>
+					</div>
+					<div class="dataTables_wrapper" style="left: 35px; width: 100px; float: left; margin-top: 10px; margin-bottom: 15px;">
+						<input id="btnPesquisar" class="botao" type="submit" name="Pesquisar" value="Pesquisar" />
+					</div>
+					<div class="dataTables_wrapper">
+						<table class="display  dataTable" cellspacing="0" style="width: 90%; border: 1px;" wicket:id="table"></table>
+						<div class="msgERROR" wicket:id="containerVazio">Nenhum registro encontrado!</div>
+					</div>
+				</fieldset>
+				<div class="clear"></div>
 				<div class="grid_6" style="margin-left: 30px;">
-					<input wicket:id="btnNovoExercicio" class="botao" type="submit" name="avancar" value="Novo Aparelho" /> 
-					<input wicket:id="btnVoltar" class="botao" type="submit" name=Limpar value="Voltar"/>
+					<input wicket:id="btnNovoExercicio" class="botao" type="submit" name="avancar" value="Cadastrar Novo Exercício" />
+					<input wicket:id="btnVoltar" class="botao" type="submit" name=Limpar value="Voltar" />
 				</div>
+			</div>
 		</div>
 	</form>
 </wicket:extend>
