--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/BasePageMobile/BasePageMobile.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/BasePageMobile/BasePageMobile.html
@@ -7,6 +7,6 @@
 <meta content="authenticity_token" name="csrf-param" />
 </head>
 <body >
-	<div class="minmuHeight"><wicket:child /></div>
+	<div class="minmuHeight" style="margin-left: 5px; margin-right: 5px" ><wicket:child /></div>
 </body>
 </html>
