--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileVisualizarExercicio/MobileVisualizarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileVisualizarExercicio/MobileVisualizarExercicioIndex.html
@@ -1,17 +1,27 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div data-role="header">
-			<a href="" wicket:id="btnVoltar" data-icon="arrow-l">Voltar</a>
+			<a href="" wicket:id="btnVoltar" class="botaoMenu" data-icon="arrow-l"></a>
 			<h1>Alan</h1>
-			<a href="" data-icon="check">Home</a>
+			<a href="" wicket:id="btnExecutar" data-icon="plus" class="botaoMenu"> </a>
 		</div>
 		<div class="ui-body ui-body-a ui-corner-all">
-
 			<div class="ui-content">
 				<label wicket:id="lbnNomeExercicio" for="name"></label>
 			</div>
+			<div class="ui-content backGroundExecutar" align="left" >
+				<ul class="bxslider">
+					<li style="margin: auto">
+						<img wicket:id="image1" />
+					</li>
+					<li>
+						<img wicket:id="image2" />
+					</li>
+				</ul>
+			</div>
+			<div class="clear"></div>
 			<div class="ui-content">
-				<label id="lbnNomeExercicio" for="name"></label>
+				<label wicket:id="lbnDescricao" for="name"></label>
 			</div>
 		</div>
 	</form>
