--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/TipoExercicio/MobileTipoExercicoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/TipoExercicio/MobileTipoExercicoIndex.html
@@ -1,12 +1,16 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div data-role="header">
-			<a href="" wicket:id="btnVoltar" data-icon="arrow-l">Voltar</a>
+			<a href="" wicket:id="btnVoltar" class="botaoMenu" data-icon="arrow-l"></a>
 			<h1>Alan</h1>
-			<a href="" data-icon="check">Home</a>
+			<a href="" class="botaoMenu" data-icon="check"></a>
 		</div>
-		<span wicket:id="listaExercicios">
-			<input wicket:id="btnTipoExercicio" type="button" class="selector ui-btn-icon-left" data-icon="arrow-r" value="Submit Button" />
-		</span>
+		<ul data-role="listview" data-autodividers="true" data-filter="true" data-inset="true">
+			<li wicket:id="listItems">
+				<a wicket:id="Link">
+					<label wicket:id="lbnNome" class="lbnLink"></label>
+				</a>
+			</li>
+		</ul>
 	</form>
 </wicket:extend>
