--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
@@ -28,11 +28,11 @@
 					<li data-role="list-divider"><h2><label wicket:id="lbnData"></label></h2></li>
 					<li style="border-bottom-width: 20px; border-bottom-color: black; border-left-width: 0px; border-right-width: 0px;">
 						<h2>Historico Atividade</h2>
-						<div>Repetições: <span class="ui-li-count1" wicket:id="lbnRepeticoes"></span>
+						<div>Repetições: <span class="ui-li-count ui-body-inherit" style="position: static; float: right;" wicket:id="lbnRepeticoes"></span>
 					</div>
-						<div>Series: <span class="ui-li-count1" wicket:id="lbnSeries"></span>
+						<div>Series: <span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnSeries"></span>
 					</div>
-						<div>Peso: <span class="ui-li-count1" wicket:id="lbnPeso"></span> KG
+						<div>Peso: <span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnPeso"></span> KG
 					</div>
 					</li>
 					</li>
