--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
@@ -1,7 +1,7 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div data-role="header">
-			<a href="" class="botaoMenu" data-icon="delete"></a>
+			<a href="" class="botaoMenu" wicket:id="btnVoltar" data-icon="arrow-l"></a>
 			<h1>Alan</h1>
 			<a href="" data-icon="check" class="botaoMenu" data-theme="ui-icon"></a>
 		</div>
