--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/BasePageMobile/BasePageMobile.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/BasePageMobile/BasePageMobile.html
@@ -6,7 +6,7 @@
 <title>Grande Via Fitness</title>
 <meta content="authenticity_token" name="csrf-param" />
 </head>
-<body onload="addScriptCss()" >
+<body >
 	<div class="minmuHeight" style="margin-left: 5px; margin-right: 5px" ><wicket:child /></div>
 </body>
 </html>
