--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
@@ -9,7 +9,7 @@
 			<div class="ui-content">
 				<label wicket:id="lbnNomeExercicio" for="name"></label>
 			</div>
-			<div class="ui-content backGroundExecutar" align="left" >
+			<div class="ui-content backGroundExecutar" align="center" >
 				<ul class="bxslider">
 					<li style="margin: auto">
 						<img wicket:id="image1" />
