--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
@@ -1,23 +1,43 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
-		<div class="header" data-role="header"><a href="" wicket:id="btnVoltar" class="botaoMenu" data-icon="arrow-l"></a>
-			<h1>Alan</h1> <a href="" id="btnExecutar" data-icon="plus" class="botaomenu"> </a></div>
+		<div class="header" data-role="header">
+			<a href="" wicket:id="btnVoltar" class="botaoMenu" data-icon="arrow-l"></a>
+			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
+			<a href="" id="btnExecutar" data-icon="plus" class="botaomenu"> </a>
+		</div>
 		<div style="margin: auto;">
+		<div class="clear"></div>
 			<div data-form="ui-body-a" style="border-left-width: 1px; margin-left: 10px; margin-right: 10px; margin-top: 10px;"
-			class="ui-body ui-body-a ui-corner-all"
-		>
-				<div class="ui-content"><label for="basic"> Quantidade Peso <b>(KG)</b>
-				</label>
-					<div class="grid_2"><input type="text" wicket:id="qtdPeso" class="valor" name="qtdPeso"></div></div>
-				<div class="ui-content"><label for="basic"> Quantidade de Repetições </label>
-					<div class="grid_2"><input type="text" wicket:id="qtdRepeticao" class="numero" name="qtdRepeticao"></div></div>
-				<div class="ui-content"><label for="basic"> Numero Series </label>
-					<div class="grid_2"><input type="text" name="numeroSeries" class="numero" wicket:id="numeroSeries"></div></div>
+				class="ui-body ui-body-a ui-corner-all"
+			>
+				<div class="ui-content">
+					<label for="basic">
+						Quantidade Peso
+						<b>(KG)</b>
+					</label>
+					<div class="grid_2">
+						<input type="text" wicket:id="qtdPeso" class="valor" name="qtdPeso">
+					</div>
+				</div>
+				<div class="ui-content">
+					<label for="basic"> Quantidade de Repetições </label>
+					<div class="grid_2">
+						<input type="text" wicket:id="qtdRepeticao" class="numero" name="qtdRepeticao">
+					</div>
+				</div>
+				<div class="ui-content">
+					<label for="basic"> Numero Series </label>
+					<div class="grid_2">
+						<input type="text" name="numeroSeries" class="numero" wicket:id="numeroSeries">
+					</div>
+				</div>
 				<div class="clear"></div>
 
-				<div class="ui-content grid_4"><input type="button" name="name" wicket:id="salvar" value="Adicionar"></div>
+				<div class="ui-content grid_4">
+					<input type="button" name="name" wicket:id="salvar" value="Adicionar">
+				</div>
 
-		</div>
+			</div>
 			<div class="clear"></div>
 
 			<div class="ui-content" wicket:id="container">
@@ -25,22 +45,39 @@
 					<li wicket:id="listaHistorico"
 						style="height: 0px; width: 0px; border-left-width: 0px; padding-left: 0px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; border-right-width: 0px; border-top-width: 0px;"
 					>
-					<li data-role="list-divider"><h2><label wicket:id="lbnData"></label></h2></li>
+					<li data-role="list-divider">
+						<h2>
+							<label wicket:id="lbnData"></label>
+						</h2>
+					</li>
 					<li style="border-bottom-width: 20px; border-bottom-color: black; border-left-width: 0px; border-right-width: 0px;">
 						<h2>Historico Atividade</h2>
-						<div>Repetições: <span class="ui-li-count ui-body-inherit" style="position: static; float: right;" wicket:id="lbnRepeticoes"></span>
-					</div>
-						<div>Series: <span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnSeries"></span>
-					</div>
-						<div>Peso: <span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnPeso"></span> KG
-					</div>
+						<div>
+							Repetições:
+							<span class="ui-li-count ui-body-inherit" style="position: static; float: right;" wicket:id="lbnRepeticoes"></span>
+						</div>
+						<div>
+							Series:
+							<span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnSeries"></span>
+						</div>
+						<div>
+							Peso:
+							<span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnPeso"></span>
+							KG
+						</div>
 					</li>
 					</li>
-				</ul> <span wicket:id="navigator"></span>
+				</ul>
+				<span wicket:id="navigator"></span>
+			</div>
 		</div>
-	</div>
-
+		<div class="clear"></div>
 		<div wicket:id="feedback"></div>
+		<div data-role="footer" data-position="fixed">
+			<h1>
+				<label wicket:id="lbnLogado"></label>
+			</h1>
+		</div>
 	</form>
 
 </wicket:extend>
