--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
@@ -99,7 +99,7 @@
 				</div>
 				<div>
 					<fieldset>
-						<legend>Upload de Fotos</legend>
+						<legend class="legenda" style="font-size: 14px" >Upload de Fotos</legend>
 
 
 
