Atualizado Add instrutor...

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
@@ -43,29 +43,28 @@
 			<div class="ui-content" wicket:id="container">
 				<ul id="listview" data-role="listview" data-inset="true">
 					<li wicket:id="listaHistorico"
-						style="height: 0px; width: 0px; border-left-width: 0px; padding-left: 0px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; border-right-width: 0px; border-top-width: 0px;"
-					>
-					<li data-role="list-divider">
-						<h2>
-							<label wicket:id="lbnData"></label>
-						</h2>
-					</li>
-					<li style="border-bottom-width: 20px; border-bottom-color: black; border-left-width: 0px; border-right-width: 0px;">
-						<h2>Historico Atividade</h2>
-						<div>
-							Repetições:
-							<span class="ui-li-count ui-body-inherit" style="position: static; float: right;" wicket:id="lbnRepeticoes"></span>
-						</div>
-						<div>
-							Series:
-							<span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnSeries"></span>
-						</div>
-						<div>
-							Peso:
-							<span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnPeso"></span>
-							KG
-						</div>
-					</li>
+						style="height: 0px;width: 0px; border-left-width: 0px; padding-left: 0px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; border-right-width: 0px; border-top-width: 0px;">
+						<li data-role="list-divider">
+							<h2>
+								<label wicket:id="lbnData"></label>
+							</h2>
+						</li>
+						<li style="border-bottom-width: 20px; border-bottom-color: black; border-left-width: 0px; border-right-width: 0px;">
+							<h2>Historico Atividade</h2>
+							<div>
+								Repetições:
+								<span class="ui-li-count ui-body-inherit" style="position: static; float: right;" wicket:id="lbnRepeticoes"></span>
+							</div>
+							<div>
+								Series:
+								<span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnSeries"></span>
+							</div>
+							<div>
+								Peso:
+								<span class="ui-li-count" style="position: static; float: right;" wicket:id="lbnPeso"></span>
+								KG
+							</div>
+						</li>
 					</li>
 				</ul>
 				<span wicket:id="navigator"></span>
