--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -10,16 +10,20 @@
 		<div class="div_tam"></div>
 	</div>
 	<div class="Layout_Fundo">
+		
 		<div class="fundoTopo ">
+			<a class="sair"  href="osiris-web/logout" wicket:id="sair"> Sair</a>
 			<div class="div_tam" style="height: 118px;">
 				<h2 class="loganGrand">Grande Via Fitness</h2>
+				
 			</div>
+			
 		</div>
 	</div>
 
 	<div class="divBranca borderVermelha">
 		<div wicket:id="containerUsuario" class="divUsuarioLogado">
-			Usuario Logado: <span wicket:id="nomeUsuario"></span>
+			Usuario: <span wicket:id="nomeUsuario"></span>
 		</div>
 		<span id="SpanHorarioData" class="SpanHorarioData"> </span>
 		<div wicket:id="containerMenu">
