Adicionado o cadastro de produtos

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -32,9 +32,8 @@
 					<li id="nav-1" style="z-index: 1" ><a id="Menu1Link" class="menuRedendoLeft"
 						href="#">Cadastro </a>
 						<ul id="subnav-1" class="ultimoLinkBottomLeft">
-							<li><a id="SubMenu1Link" href="#">Cadastro Produtos</a></li>
+							<li><a wicket:id="consultarProduto" href="#">Cadastro Produtos</a></li>
 							<li><a wicket:id="consultarCliente" href="#">Cadastro Cliente</a></li>
-							<li><a id="SubMenu2Link" href="#">Cadastro Professor</a></li>
 							<li><a wicket:id="consultarExercicio" class="ultimoLinkBottomLeft"
 								href="#">Cadastro Exercício</a></li>
 						</ul></li>
