--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -40,11 +40,11 @@
 
 					<li id="nav-2"  style="z-index: 1" ><a id="Menu2Link" href="#">Vendas </a>
 						<ul id="subnav-3" class="ultimoLinkBottomLeft">
-							<li><a id="SubMenu5Link" href="#">Efetuar Venda</a></li>
+							<li><a wicket:id="efetuarVenda" href="#">Efetuar Venda</a></li>
 							<li><a id="SubMenu6Link" href="#">Relatorio de Vendas</a></li>
 						</ul></li>
 					<li id="nav-3"  style="z-index: 1" ><a id="Menu3Link" class="menuRedendoRight"
-						href="#">Menu3</a></li>
+						href="#">Mensalidade</a></li>
 				</ul>
 			</div>
 		</div>
